--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<nav>
 							<ul>
 								<li><a href="#about">About</a></li>
-								<li><a href="#CV">CV/Resume</a></li>
+								<li><a href="#CV">CV</a></li>
 								<li><a href="#music">Music</a></li>
 								<li><a href="#contact">Contact</a></li>
 							</ul>
@@ -46,27 +46,44 @@
 								<h2 class="major">About</h2>
 								<span class="image main center"><img src="images/Kishan-Trivedi.jpg" alt="" /></span>
 								<p class="para">Hi! My name is Kishan Trivedi. I am a graduate student at the Viterbi School Of Engineering, USC pursuing my Masters in Computer Science. I completed my Bachelors in Computer Science from 
-									the University of Mumbai, India. <a href="#work"></a></p>
-								<p>I have an experience of 2 years in the Fin-Tech industry. I worked as an Associate Software Developer at Edelweiss Financial Services from 2019 to 2021 where
-									I worked on a post-trade risk management software. I have significant experience in core Java implementation and well versed with the tech-stack of Kafka, Esper, MongoDB, and AWS.
+									the University of Mumbai, India.</p>
+								<p>I have significant experience in Enterprise Software development, Web development, Data Analysis, DevOps, and Testing. My main interests are in the domains of distributed systems, software engineering, and machine learning.</p>
+								<p>At Edelweiss financial services, I primarily worked as a Java Developer on a real-time post-trade risk analysis software for the Global Markets Trading Desk. The application achieved low latency, high throughput, and high scalability by using Kafka + Esper CEP as the main data-flow medium. 
+									During my tenure, I gained relevant experience in designing enterprise-level software by implementing SOLID design principles. Apart from the technical aspect, I also gained considerable knowledge about the financial world that mainly included derivative pricing and risk modeling for trading.
 								</p>
-								<p>My main interests are in the domains of Distributed Systems, Machine Learning and Artificial Intelligence.</p>
-								<p>My hobbies include playing soccer, trekking and playing/producing music.</p>
+								<p>My hobbies include problem-solving, playing soccer (Fc Barcelona fan!), reading, trekking, and playing the guitar.</p>
 							</article>
 
 						<!-- Portfolio -->
 							<article id="CV">
-								<h2 class="major">Resume</h2>
+								<h2 class="major">CV</h2>
 								<h3><a href="resume/Kishan_Trivedi.pdf" class="button icon solid fa-download" download="Kishan-Trivedi-Resume.pdf">Download Resume</a></h3>
 								<br>
-								<h2 class="major">CV</h2>
-								<h4 class="major">Education</h4>
-								<p>University of Southern California : MS in CS - <i>August 2021 - Present</i></p>
-								<p>University of Mumbai : BE in CS - <i>August 2015 - May 2019</i></p>
-								<h4 class="major">Technical Stack</h4>
-								<p>Java, Python, MySQL, JavaScript, MongoDB, Kafka, Spring-Boot, AWS, Maven, Jenkins</p>
 								<h4 class="major">Experience</h4>
-								<p>Software Developer @ Edelweiss Financial Services Pvt Ltd - <i>June 2019 - July 2021</i></p>
+								<p>Edelweiss Financial Services Pvt. Ltd.<br>Associate -Technology:<i> Apr 2021 - Jul 2021</i></p>
+								<ul>
+									<li>Designed and developed a data analysis solution for risk trend analysis.</li>
+									<li>Collaborated on a project for end of day risk analysis, for the options trading desk.</li>
+									<li>Developed a module to calculate cross margin benefit for hedged index postions.</li>
+									<li>Mentored juniors and interns in understanding the business logic.</li>
+								</ul>
+								<p>Edelweiss Financial Services Pvt. Ltd.<br>Junior Associate -Technology:<i> Jun 2019 - Apr 2021</i></p>
+								<ul>
+									<li>Added multiple features to a real-time post-trade risk analysis software.</li>
+									<li>Contributed to the development of an in-house model driven framework.</li>
+									<li>Built a client wise limit monitoring system.</li>
+									<li>Collaborated with a team in the maintenance of financial reference data.</li>
+								</ul>
+								<h4 class="major">Education</h4>
+								<p>University of Southern California : MS in CS - <i>August 2021 - Present</i>
+								<br><i>CGPA : 3.65/4.0</i>
+								<br><i>Relevant Courses : Analysis of Algorithms, Database Systems.</i></p>
+								<p>University of Mumbai : BE in CS - <i>August 2015 - May 2019</i>
+								<br><i>CGPA : 9.25/10.0</i><br><i>
+								Relevant Courses : Data Structures, Machine Learning, Software Engineering.</i></p>
+								<h4 class="major">Skills</h4>
+								<p>Programming Languages : <br>Java, Python, C. <br><br> Web and Database Technologies : <br>Node.js, Angular, Spring Boot, HTML, CSS, Javascript, REST APIs, AWS Athena, AWS
+									S3, MongoDb, MySQL, Redis, PostgreSQL. <br><br>Other Tools and Technologies: <br>Confluent Kafka, Docker, Esper, Maven, Jenkins, Apache ORC, Git, SysAdmin.</p>
 							</article>
 
 						<!-- Music -->
@@ -81,7 +98,7 @@
 								<p>
 									Guitar Heroes : Mateus Asato, Plini, Tim Henson and John Mayer
 								</p>
-								<p>Here are some of my covers of songs from genres of prog metal, blues, rock, alternative-rock and pop</p>
+								<p>Here are some of my covers!</p>
 								<video width="320" height="240" controls>
 									<source src="videos/3.mp4" type="video/mp4">
 								  Your browser does not support the video tag.
